--- a/app/src/main/res/layout/workoutnow_list_group_expandableview.xml
+++ b/app/src/main/res/layout/workoutnow_list_group_expandableview.xml
@@ -94,6 +94,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1.0"
+                    android:maxLines="1"
+                    android:marqueeRepeatLimit="marquee_forever"
                     android:text="Load type1" />
 
                 <TextView
@@ -107,7 +109,7 @@
                     android:id="@+id/text_view_exerciseabs_separate_hands_value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.0"
+                    android:layout_weight="1.4"
                     android:text="yes"/>
 
             </LinearLayout>
@@ -151,7 +153,7 @@
                     android:id="@+id/text_view_exerciseabs_angle_value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.0"
+                    android:layout_weight="1."
                     android:text="angle1"/>
 
             </LinearLayout>
@@ -197,7 +199,7 @@
                     android:id="@+id/text_view_exerciseabs_thumbs_direction_value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="1.0"
                     android:text="Inwards"/>
 
             </LinearLayout>
