--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:fontFamily">@font/abeezee</item>
+        <item name="android:layoutDirection">ltr</item>
     </style>
-<!--    &lt;!&ndash; Base application theme. &ndash;&gt;-->
+
+
+    <!--    &lt;!&ndash; Base application theme. &ndash;&gt;-->
 <!--    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
 <!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
 <!--        <item name="colorPrimary">@color/colorPrimary</item>-->
