--- a/app/src/main/res/layout/workoutnow_layout.xml
+++ b/app/src/main/res/layout/workoutnow_layout.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/black"
+    android:layoutDirection="ltr"
     tools:context=".MainActivity">
 
     <!-- Header Section -->
